# NeMo-Skills

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  debug_actual_output.py  debug_code_detection.py  debug_code_execution.py  debug_merge.py  debug_new_output.py  debug_output_ending.py  debug_stop_phrases.py  mkdocs.yml  pyproject.toml  setup.py  test_openai_code_execution.py  test_openai_code_execution_complex.py  test_openai_code_execution_simple.py  test_openai_tir.py  test_pipeline_integration.py  test_simple_integration.py
.github/workflows/: docs.yml  gpu_tests.yml  lint.yml  tests.yml
cluster_configs/: example-local.yaml  example-slurm.yaml
dataset_explorer_demo/: README.md
dockerfiles/: Dockerfile.megatron  Dockerfile.nemo  Dockerfile.nemo-rl  Dockerfile.nemo-skills  Dockerfile.sandbox  Dockerfile.sglang  Dockerfile.tensorrt_llm  Dockerfile.verl  Dockerfile.vllm  README.md  sglang.patch  vllm.patch
dockerfiles/sandbox/: nginx.conf.template  start-with-nginx.sh
docs/: index.md  openai_tir_guide.md
docs/basics/: chat_interface.md  cluster-configs.md  code-packaging.md  common-parameters.md  index.md  inference.md  prerequisites.md  prompt-format.md  sandbox.md
docs/evaluation/: code.md  formal-math.md  index.md  instruction-following.md  long-context.md  natural-math.md  other-benchmarks.md  scientific-knowledge.md  tool-calling.md
docs/opencodereasoning1/: dataset.md  evaluation.md  index.md
docs/openmathinstruct2/: dataset.md  evaluation.md  training.md
docs/openmathreasoning1/: dataset.md  evaluation.md  index.md  training.md
docs/pipelines/: checkpoint-conversion.md  decontamination.md  evaluation.md  generation.md  index.md  llm-as-a-judge.md  run-cmd.md  training-verl-openrlhf.md  training.md
nemo_skills/: __init__.py  file_utils.py  utils.py  version.py
recipes/: README.md
requirements/: code_execution.txt  common-tests.txt  docs.txt  main.txt
tests/: conftest.py  test_code_execution.py  test_configs.py  test_data_preparation.py  test_datasets.py  test_default_args.py  test_generation.py  test_math_equal.py  test_mcp_clients.py  test_metrics.py  test_pipeline_utils.py  test_prompts.py  test_session_affinity.py
(+527 files in other folders)
