# Copyright (c) 2024, NVIDIA CORPORATION.  All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
]

name = "nemo_skills"
description = "NeMo Skills - a project to improve skills of LLMs"
readme = "README.md"
# license-files = ["LICENSE"]  # causing problems in nemo-aligner container
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://nvidia.github.io/NeMo-Skills"
source = "https://github.com/NVIDIA/NeMo-Skills"
issues = "https://github.com/NVIDIA/NeMo-Skills/issues"

[project.scripts]
ns = "nemo_skills.pipeline.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.dynamic]
version = { attr = "nemo_skills.version.__version__" }
dependencies = {file = ["requirements/main.txt"]}
optional-dependencies = {core = { file = ["requirements/main.txt"] }, all = { file = ["requirements/main.txt"] }}

[tool.isort]
profile = "black"  # black-compatible
line_length = 119  # should match black parameters
py_version = 310  # python 3.10 as a target version

[tool.black]
line_length = 119
skip_string_normalization = true

[tool.pytest.ini_options]
markers = [
    "gpu: tests that require a GPU to run",
]
